Add homepage to package.json

--- a/use-am-i-printing/package.json
+++ b/use-am-i-printing/package.json
@@ -34,5 +34,6 @@
   },
   "bugs": {
     "url": "https://github.com/joeblas/use-am-i-printing/issues"
-  }
+  },
+  "homepage": "https://useamiprinting.netlify.app/"
 }
